--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -11,4 +11,5 @@ body {
 @import "./Player.scss";
 @import "./Song.scss";
 @import "./Library.scss";
+@import "./nav.scss";
 @import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,600;0,700;1,400&display=swap");
