--- a/src/styles/Player.scss
+++ b/src/styles/Player.scss
@@ -14,6 +14,7 @@
   align-content: center;
   justify-content: space-between;
   padding: 1rem;
+  padding-bottom: 3rem;
   svg {
     cursor: pointer;
   }
