--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -6,13 +6,19 @@ nav {
   button {
     background: transparent;
     border: none;
+    border-radius: 1rem;
     cursor: pointer;
     padding: 0.5rem;
     border: 2px solid rgb(65, 65, 65);
     transition: all 0.3s ease;
+    font-size: 1.8rem;
     &:hover {
       background: rgb(65, 65, 65);
       color: white;
+    }
+    img {
+      height: 1.5rem;
+      width: 1.5rem;
     }
   }
   .library-active {
